Fixed xss availability
